Add all content for shepherds-pie recipe

--- a/recipes/shepherds-pie.html
+++ b/recipes/shepherds-pie.html
@@ -7,5 +7,39 @@
 
     <body>
         <h1>Shepherd's Pie</h1>
+        <img src="../images/shepherds-pie.jpg" width = 400 alt="A completed Shepherd's Pie with a golden crust.">
+        <h2>Description</h2>
+        <p>A Shepherd's Pie consists of a 'filling' of browned lamb mince, peas and diced carrots, topped with crust of mashed potato and baked in an oven.</p>
+        <p>A good Shepherd's Pie will require a significant amount of preparatory work but the results are worth it for a weekend or special occasion.</p>
+
+        <h2>Ingredients</h2>
+        <ul>
+            <li>Lamb Mince (500g)</li>
+            <li>4 Yellow Potatoes (Medium-Sized)</li>
+            <li>2 Carrots (Medium-Sized)</li>
+            <li>Frozen Peas (50g)</li>
+            <li>1 whole egg</li>
+            <li>Milk (200ml)</li>
+            <li>Flour (2 tablespoons)</li>
+            <li>Butter (1 tablespoon)</li>
+            <li>Thyme, Rosemary, Salt, Pepper, Olive oil</li>
+        </ul>
+
+        <h2>Steps</h2>
+        <ol>
+            <li>Begin boiling water for potatoes.</li>
+            <li>Small-dice both carrots, then peel all potatoes and cut the peeled potatoes into quarters.</li>
+            <li>Boil all potato quarters in a pot with water (until tender).</li>
+            <li>Put olive oil in a large frypan and begin frying up lamb mince, breaking it down well with a wooden spoon or other utensil.</li>
+            <li>Add salt and pepper to lamb, and add diced carrots into the pan once light browning has started.</li>
+            <li>Add thyme and rosemary and continue frying until lamb mince has reached a medium-heavy browning. Stir or toss occasionally to prevent burning or sticking.</li>
+            <li>While the lamb cooks, drain all potato water and begin mashing potatoes in the pot. Add milk, the egg, butter, salt and a dash of pepper and incorporate them all well.</li>
+            <li>As lamb and carrot mixture begins to approach final stages, add flour and incorporate well. Ensure no flour is left raw.</li>
+            <li>Lower the heat slightly, add peas and mix well until peas are just thawed.</li>
+            <li>Fill oven-safe dish of choice with meat filling, and then top with mashed potato mixture.</li>
+            <li>Etch a pattern into the top of the potato with a fork. (Optional)</li>
+            <li>Cook dish in oven for 20-25 minutes until potatoes are golden brown.</li>
+            <li>Let rest for 5 minutes then cut up and serve. Ensure each plate has a proportional amount of crust and filling.</li>
+        </ol>
     </body>
 </html>
