--- a/index.html
+++ b/index.html
@@ -2,11 +2,20 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Odin Recipes</title>
+        <title>Eric's Recipe Book</title>
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-        <a href="recipes/shepherds-pie.html">Shepherd's Pie</a>
+        <h1>Eric's Recipe Book</h1>
+        <p>Below is a collection of recipes that each have a personal interest to me for a different reason.</p>
+
+        <p>The first - the Shepherd's pie - my personal favourite recipe that I've enjoyed since childhood. The second - the katsu curry - a newer favourite that I was introduced to in adulthood. The final one - the salmon linguine - one that I was introduced to by my partner's homecooking. Here they are for your perusal:</p>
+
+        <ul>
+            <li><a href="recipes/shepherds-pie.html">Shepherd's Pie</a></li>
+            <li><a href="recipes/katsu-curry.html">Japanese Katsu Curry</a></li>
+            <li><a href="recipes/salmon-linguine.html">Salmon Linguine</a></li>
+        </ul>
+
     </body>
 </html>
