--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
 
     <body>
         <h1>Eric's Recipe Book</h1>
-        <p>Below is a collection of recipes that each have a personal interest to me for a different reason.</p>
 
-        <p>The first - the Shepherd's pie - my personal favourite recipe that I've enjoyed since childhood. The second - the katsu curry - a newer favourite that I was introduced to in adulthood. The final one - the salmon linguine - one that I was introduced to by my partner's homecooking. Here they are for your perusal:</p>
+        <img src="images/recipe-book.png" alt="Photo of a recipe book surrounded by spices and flavourings" height="400">
+
+        <p>Below is a collection of recipes that each have a personal interest to me.</p>
+
+        <p>The first - the Shepherd's pie - my personal favourite recipe that I've enjoyed since childhood. The second - the katsu curry - a newer favourite that I was introduced to in adulthood. The final one - the salmon linguine - one that I was introduced to by my partner's home-cooking. Here they are for your perusal:</p>
 
         <ul>
             <li><a href="recipes/shepherds-pie.html">Shepherd's Pie</a></li>
@@ -17,5 +20,6 @@
             <li><a href="recipes/salmon-linguine.html">Salmon Linguine</a></li>
         </ul>
 
+        <p>Take your time to look around, and feel free to try any and all recipes yourself!</p>
     </body>
 </html>
