Make simple changes to the shepherds pie recipe

--- a/recipes/shepherds-pie.html
+++ b/recipes/shepherds-pie.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Shepherd's Pie</title>
+        <title>Eric's Recipe Book</title>
     </head>
 
     <body>
