Change "Eric's recipes" to Windsorette recipes

--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Eric's Recipe Book</title>
+        <title>Windsorette Recipe Book</title>
     </head>
 
     <body>
-        <h1>Eric's Recipe Book</h1>
+        <h1>Windsorette Recipe Book</h1>
 
         <img src="images/recipe-book.png" alt="Photo of a recipe book surrounded by spices and flavourings" height="400">
 
-        <p>Below is a collection of recipes that each have a personal interest to me.</p>
+        <p>Below is a collection of recipes that have a personal interest to us.</p>
 
-        <p>The first - the Shepherd's pie - my personal favourite recipe that I've enjoyed since childhood. The second - the katsu curry - a newer favourite that I was introduced to in adulthood. The final one - the salmon linguine - one that I was introduced to by my partner's home-cooking. Here they are for your perusal:</p>
+        <p>The first - the Shepherd's pie - Eric's personal favourite recipe that he's enjoyed since childhood. The second - the katsu curry - something that we were able to bond over together in adulthood. The final one - the salmon linguine - one of Ashlee's creations that we both love. Here they are for your perusal:</p>
 
         <ul>
             <li><a href="recipes/shepherds-pie.html">Shepherd's Pie</a></li>
