--- a/recipes/salmon-linguine.html
+++ b/recipes/salmon-linguine.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Eric's Recipe Book</title>
+        <title>Windsorette Recipe Book</title>
     </head>
 
     <body>
