Add links to top and index at bottom of recipes

--- a/recipes/salmon-linguine.html
+++ b/recipes/salmon-linguine.html
@@ -26,5 +26,7 @@
             <li>Boil all potato quarters in a pot with water (until tender).</li>
             <li>Put olive oil in a large frypan and begin frying up lamb mince, breaking it down well with a wooden spoon or other utensil.</li>
         </ol>
+
+        <p><a href="./salmon-linguine.html">Return to Top</a> | <a href="../index.html">Return to Home Page</a></p>
     </body>
 </html>
