--- a/recipes/shepherds-pie.html
+++ b/recipes/shepherds-pie.html
@@ -41,5 +41,7 @@
             <li>Cook dish in oven for 20-25 minutes until potatoes are golden brown.</li>
             <li>Let rest for 5 minutes then cut up and serve. Ensure each plate has a proportional amount of crust and filling.</li>
         </ol>
+
+        <p><a href="./shepherds-pie.html">Return to Top</a> | <a href="../index.html">Return to Home Page</a></p>
     </body>
 </html>
