Add all katsu curry recipe information to recipe

--- a/recipes/katsu-curry.html
+++ b/recipes/katsu-curry.html
@@ -9,22 +9,35 @@
         <h1>Katsu Curry</h1>
         <img src="../images/katsu-curry.jpg" width = 400 alt="A completed Japanese katsu curry served on a plate and ready to eat.">
         <h2>Description</h2>
-
+        <p>Katsu Curry is a Japanese dish that consists of breaded chicken, rice and a curry sauce made out of vegetables and katsu sauce.</p>
+        <p>There is a moderate amount of prep-work required, but if you're in a pinch consider cooking the chicken in the oven instead of frying. This dish should comfortably serve 3 or 4 people.</p>
         <h2>Ingredients</h2>
         <ul>
-            <li>Salmon</li>
+            <li>2 Chicken Breasts (Medium-Sized)</li>
+            <li>3 Carrots (Medium-Sized)</li>
             <li>4 Yellow Potatoes (Medium-Sized)</li>
-            <li>2 Carrots (Medium-Sized)</li>
-            <li>Frozen Peas (50g)</li>
-            <li>1 whole egg</li>
+            <li>Rice (1.5 cups, uncooked)</li>
+            <li>3 whole eggs</li>
+            <li>Flour (12 tablespoons)</li>
+            <li>Panko Breadcrumbs (12 tablespoons)</li>
+            <li>3 Katsu Curry stock cubes</li>
+            <li>Salt, Pepper, Olive Oil</li>
         </ul>
 
         <h2>Steps</h2>
         <ol>
-            <li>Begin boiling water for potatoes.</li>
-            <li>Small-dice both carrots, then peel all potatoes and cut the peeled potatoes into quarters.</li>
-            <li>Boil all potato quarters in a pot with water (until tender).</li>
-            <li>Put olive oil in a large frypan and begin frying up lamb mince, breaking it down well with a wooden spoon or other utensil.</li>
+            <li>Begin boiling water for vegetables.</li>
+            <li>Wash rice in rice cooker and then start rice cooker with appropriate amount of water.</li>
+            <li>Cut carrots and potatoes into a medium-large dice of approximately equal size.</li>
+            <li>Boil all vegetables with water in a pot until they have become more tender, but not soft. Add a pinch of salt to the vegetables.</li>
+            <li>Prepare breading station by beating eggs in a bowl, placing mixture of flour, a pinch of salt and a crack of pepper on a plate and placing Panko breadcrumbs on a second plate.</li>
+            <li>Cut chicken breast in half to create a larger flat surface area to use for the dish. A flatter shape will prevent chicken being undercooked while being fried.</li>
+            <li>Dry the flat chicken breasts in flour, then submerge in the egg wash before finally coating them in breadcrumbs.</li>
+            <li>Shallow fry the breaded chicken in olive oil in a frypan. Continue frying until chicken is crisp and golden brown.</li>
+            <li>While the chicken fries, drain out 95% of the vegetable water and stir in 2 of the curry stock cubes.</li>
+            <li>Stir curry and vegetable mixture well until sauce reaches appropriate consistency - it should be viscous but not thick. Add water and the final stock cube as appropriate to reach this consistency.</li>
+            <li>Slice up fried chicken breast in the style of your choosing to make consumption easier.</li>
+            <li>Arrange breaded chicken, rice and curry sauce on a plate and then serve.</li>
         </ol>
 
         <p><a href="./katsu-curry.html">Return to Top</a> | <a href="../index.html">Return to Home Page</a></p>
