Add all salmon linguine recipe information

--- a/recipes/salmon-linguine.html
+++ b/recipes/salmon-linguine.html
@@ -9,22 +9,28 @@
         <h1>Salmon Linguine</h1>
         <img src="../images/salmon-linguine.jpg" width = 400 alt="A completed salmon linguine in a bowl and ready to eat.">
         <h2>Description</h2>
-
+        <p>This salmon linguine is a custom dish prepared by Ashlee as an easier home-made version of her esteemed seafood linguine.</p>
+        <p>There is a small amount of prep-work required, but it's realistically something you could make on a weeknight.</p>
         <h2>Ingredients</h2>
         <ul>
-            <li>Salmon</li>
-            <li>4 Yellow Potatoes (Medium-Sized)</li>
-            <li>2 Carrots (Medium-Sized)</li>
-            <li>Frozen Peas (50g)</li>
-            <li>1 whole egg</li>
+            <li>4 Salmon Fillets (Medium-Sized)</li>
+            <li>Linguine Pasta (250g)</li>
+            <li>Garlic Butter (30g)</li>
+            <li>Frozen Spinach (30g)</li>
+            <li>Salt, Olive oil </li>
         </ul>
 
         <h2>Steps</h2>
         <ol>
-            <li>Begin boiling water for potatoes.</li>
-            <li>Small-dice both carrots, then peel all potatoes and cut the peeled potatoes into quarters.</li>
-            <li>Boil all potato quarters in a pot with water (until tender).</li>
-            <li>Put olive oil in a large frypan and begin frying up lamb mince, breaking it down well with a wooden spoon or other utensil.</li>
+            <li>Begin boiling water for pasta.</li>
+            <li>Chop up all salmon fillets into ideally equal bite-size chunks, keeping the skin on.</li>
+            <li>Begin cooking linguine pasta in pot with boiling water, adding salt and olive oil to prevent sticking.</li>
+            <li>Ensure movement of pasta in water to allow for even cooking.</li>
+            <li>Begin frying up salmon in a frypan with some olive oil and salt well.</li>
+            <li>Continue frying up salmon until a good crust has formed. Ensure skin is crisp.</li>
+            <li>Drain pasta water and then add cooked pasta into the salmon pan with garlic butter.</li>
+            <li>As butter begins to melt add in frozen spinach, mix, and continue to cook until spinach thaws.</li>
+            <li>Serve up portions into a suitable plate or bowl.</li>
         </ol>
 
         <p><a href="./salmon-linguine.html">Return to Top</a> | <a href="../index.html">Return to Home Page</a></p>
