Add Ashlee's changes to salmon recipe

--- a/recipes/salmon-linguine.html
+++ b/recipes/salmon-linguine.html
@@ -15,7 +15,7 @@
         <ul>
             <li>4 Salmon Fillets (Medium-Sized)</li>
             <li>Linguine Pasta (250g)</li>
-            <li>Garlic Butter (30g)</li>
+            <li>Garlic Butter (60g)</li>
             <li>Frozen Spinach (30g)</li>
             <li>Salt, Olive oil </li>
         </ul>
@@ -24,7 +24,7 @@
         <ol>
             <li>Begin boiling water for pasta.</li>
             <li>Chop up all salmon fillets into ideally equal bite-size chunks, keeping the skin on.</li>
-            <li>Begin cooking linguine pasta in pot with boiling water, adding salt and olive oil to prevent sticking.</li>
+            <li>Begin cooking linguine pasta in pot with boiling water, adding salt to taste.</li>
             <li>Ensure movement of pasta in water to allow for even cooking.</li>
             <li>Begin frying up salmon in a frypan with some olive oil and salt well.</li>
             <li>Continue frying up salmon until a good crust has formed. Ensure skin is crisp.</li>
